crates/mun_hir/src/package_defs/snapshots/mun_hir__package_defs__tests__use_.snap
---
source: crates/mun_hir/src/package_defs/tests.rs
expression: "//- /bar.mun\nuse package::Foo;\npub struct Bar(Foo);\n\n//- /mod.mun\npub use foo::Foo; // Re-export a child's definition\n\nstruct Baz;\n\n//- /foo.mun\nuse package::{bar::Bar, Baz};\n\npub struct Foo {\n    baz: Baz, // Can use private definitions from any of its ancestors\n}\n\npub fn foo_from_bar(bar: Bar) -> Foo {\n    bar.0\n}"
---
mod mod
+-- struct Baz
+-- use struct package::foo::Foo
+-- mod bar
|   +-- struct Bar
|   '-- use struct package::foo::Foo
'-- mod foo
    +-- fn foo_from_bar
    +-- struct Foo
    +-- use struct package::Baz
    '-- use struct package::bar::Bar
