crates/mun_hir/src/package_defs/snapshots/mun_hir__package_defs__tests__use_cyclic.snap
---
source: crates/mun_hir/src/package_defs/tests.rs
expression: "//- /foo.mun\nuse super::baz::Cyclic;\n\npub struct Ok;\n\n//- /bar.mun\nuse super::foo::{Cyclic, Ok};\n\n//- /baz.mun\nuse super::bar::{Cyclic, Ok};"
---
mod mod
+-- mod bar
|   +-- ERROR: [17; 23): unresolved import
|   '-- use struct package::foo::Ok
+-- mod baz
|   +-- ERROR: [17; 23): unresolved import
|   '-- use struct package::foo::Ok
'-- mod foo
    +-- ERROR: [4; 22): unresolved import
    '-- struct Ok
