crates/mun_hir/src/package_defs/snapshots/mun_hir__package_defs__tests__use_cyclic_wildcard.snap
---
source: crates/mun_hir/src/package_defs/tests.rs
expression: "//- /foo.mun\npub use super::baz::*;\n\npub struct Ok;\n\n//- /baz.mun\npub use super::foo::{self, *};"
---
mod mod
+-- mod baz
|   +-- use struct package::foo::Ok
|   '-- use mod package::foo
'-- mod foo
    +-- struct Ok
    '-- use mod package::foo
