crates/mun_hir/src/package_defs/snapshots/mun_hir__package_defs__tests__use_duplicate_name.snap
---
source: crates/mun_hir/src/package_defs/tests.rs
expression: "//- /foo.mun\npub struct Ok;\n\n//- /bar.mun\nuse package::foo::Ok;\n\npub struct Ok;"
---
mod mod
+-- mod bar
|   +-- ERROR: 4..20: a second item with the same name imported. Try to use an alias.
|   '-- struct Ok
'-- mod foo
    '-- struct Ok
